manifest/yaml/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-frontend
  labels:
    app: mern
    tier: frontend
spec:
  ports:
  - port: 80
    targetPort: 80
    name: frontend-port
  selector:
    app: mern
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-frontend
spec:
  selector:
    matchLabels:
      app: mern
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: mern
        tier: frontend
    spec:
      containers:
      - name: mern-frontend
        image: ikhsannugs/frontend-project:1
        resources:
          limits:
            memory: 200Mi
            cpu: 100m
          requests:
            memory: 80Mi
            cpu: 50m
        ports:
        - containerPort: 80
