manifest/yaml/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-mongo
  labels:
    app: mern
    tier: db
spec:
  ports:
  - port: 27017
    targetPort: 27017
    name: mongo-port
  selector:
    app: mern
    tier: db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mern-mongo
spec:
  serviceName: "mern-mongo"
  replicas: 1
  selector:
    matchLabels:
      app: mern
      tier: db
  template:
    metadata:
      labels:
        app: mern
        tier: db
    spec:
      containers:
      - name: mern-mongo
        image: ikhsannugs/mongo-project:1
        resources:
          limits:
            memory: 512Mi
            cpu: 250m
          requests:
            memory: 200Mi
            cpu: 100m
        ports:
        - containerPort: 27017
          name: mongo-port
        volumeMounts:
        - name: data-db
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: data-db
    spec:
      storageClassName: standard-rwo
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
