manifest/yaml/rule-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  labels:
    app: mern
    tier: frontend
spec:
  ingressClassName: nginx
  rules:
  - host: ikhsan.devopscloud.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mern-frontend
            port:
              number: 80
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: mern-backend
            port:
              number: 4000
